name:                   BridgeSupport
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Parser for Apple's BridgeSupport format
description:            Parser for Apple's BridgeSupport format

Library
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-missing-signatures
  exposed-modules:      Data.BridgeSupport
  other-modules:        Data.BridgeSupport.Parse
                        Data.BridgeSupport.Types
  build-depends:        base >= 3,
                        mtl,
                        xml
